objects/APTS_External_System_Translation__c.object
<CustomObject>
    <fields>
        <fullName>Direction__c</fullName>
        <label>Direction</label>
        <picklist>
            <picklistValues>
                <fullName>Inbound</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Outbound</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>External_System_Value__c</fullName>
        <label>External System Value</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Translation_Type__c</fullName>
        <label>Translation Type</label>
        <picklist>
            <picklistValues>
                <fullName>Cost Type</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transport Mode</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Country Code</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>ABB External System Translation</label>
    <nameField>
        <displayFormat>TRNL-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ABB External System Translations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>